Worked on graph construction and entity importance evaluation

--- a/ECKG/src/ECKG.ipynb
+++ b/ECKG/src/ECKG.ipynb
@@ -186,7 +186,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading https://raw.githubusercontent.com/clarinsi/classla-resources/main/resources_1.0.1.json: 10.3kB [00:00, 8.04MB/s]                   \n",
+      "Downloading https://raw.githubusercontent.com/clarinsi/classla-resources/main/resources_1.0.1.json: 10.3kB [00:00, 9.13MB/s]                   \n",
       "INFO:classla:Downloading these customized packages for language: sl (Slovenian)...\n",
       "========================\n",
       "| Processor | Package  |\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -256,7 +256,31 @@
       "volk   spremljati   Rdečo kapico\n",
       "{'jo': 'jo', 'vsak': 'vsak', 'babica': 'babica', 'Babica': 'babica', 'deklici': 'deklici', 'Ta': 'Ta', 'vsi': 'vsi', 'Rdeča kapica': 'Rdeča kapica', 'Rdečo kapico': 'Rdeča kapica', 'ji': 'ji', 'mama': 'mama', 'ničesar': 'ničesar', 'volk': 'volk', 'Kaj': 'Kaj', 'vino': 'vino', 'vina': 'vino', 'mala deklica': 'mala deklica', 'del poti': 'del poti', 'ti': 'ti', 'cvetlice': 'cvetlice', 'čuden občutek': 'čuden občutek', 'lakoto': 'lakoto', 'tega': 'tega', 'lovec': 'lovec', 'ga': 'ga', 'mi': 'mi'}\n",
       "{'jo': 9, 'vsak': 1, 'babica': 3, 'deklici': 1, 'Ta': 2, 'vsi': 1, 'Rdeča kapica': 6, 'ji': 3, 'mama': 2, 'ničesar': 1, 'volk': 4, 'Kaj': 1, 'vino': 2, 'mala deklica': 1, 'del poti': 1, 'ti': 1, 'cvetlice': 1, 'čuden občutek': 1, 'lakoto': 1, 'tega': 3, 'lovec': 1, 'ga': 1, 'mi': 1}\n",
-      "[('Rdeča kapica', 'Volk'), ('Rdeča kapica', 'jo'), ('Rdeča kapica', 'ji'), ('Rdeča kapica', 'del poti'), ('Rdeča kapica', 'cvetlice'), ('Rdeča kapica', 'tega'), ('Rdeča kapica', 'ga'), ('jo', 'vsak'), ('jo', 'babica'), ('jo', 'Ta'), ('jo', 'vsi'), ('jo', 'mala deklica'), ('jo', 'volk'), ('jo', 'čuden občutek'), ('ji', 'mama'), ('ji', 'volk'), ('tega', 'babica'), ('tega', 'lovec'), ('babica', 'ničesar'), ('Ta', 'deklici'), ('volk', 'lakoto'), ('mama', 'mi'), ('vino', 'Kaj'), ('vino', 'ti')]\n"
+      "[('Rdeča kapica', 'Volk'), ('Rdeča kapica', 'jo'), ('Rdeča kapica', 'ji'), ('Rdeča kapica', 'del poti'), ('Rdeča kapica', 'cvetlice'), ('Rdeča kapica', 'tega'), ('Rdeča kapica', 'ga'), ('jo', 'vsak'), ('jo', 'babica'), ('jo', 'Ta'), ('jo', 'vsi'), ('jo', 'mala deklica'), ('jo', 'volk'), ('jo', 'čuden občutek'), ('ji', 'mama'), ('ji', 'volk'), ('tega', 'babica'), ('tega', 'lovec'), ('babica', 'ničesar'), ('Ta', 'deklici'), ('volk', 'lakoto'), ('mama', 'mi'), ('vino', 'Kaj'), ('vino', 'ti')]\n",
+      "('jo', 0.27390864060289255)\n",
+      "('Rdeča kapica', 0.24945442965270911)\n",
+      "('volk', 0.15123483016616496)\n",
+      "('babica', 0.1480440425217411)\n",
+      "('ji', 0.14679528057582863)\n",
+      "('tega', 0.14337812260493016)\n",
+      "('Ta', 0.11834161969691967)\n",
+      "('čuden občutek', 0.10410902421123427)\n",
+      "('vsi', 0.10410902421123427)\n",
+      "('vsak', 0.10410902421123427)\n",
+      "('mala deklica', 0.10410902421123427)\n",
+      "('ga', 0.09905357350406263)\n",
+      "('del poti', 0.09905357350406263)\n",
+      "('cvetlice', 0.09905357350406263)\n",
+      "('Volk', 0.09905357350406263)\n",
+      "('mama', 0.08672258191580265)\n",
+      "('lakoto', 0.07667036595233939)\n",
+      "('ničesar', 0.07506947745574935)\n",
+      "('lovec', 0.07335879259900396)\n",
+      "('deklici', 0.06755397851881839)\n",
+      "('mi', 0.05482816400668433)\n",
+      "('vino', 0.034782655865855966)\n",
+      "('ti', 0.02028988842683474)\n",
+      "('Kaj', 0.02028988842683474)\n"
      ]
     }
    ],
@@ -377,6 +401,8 @@
     "print(count)\n",
     "graph = create_graph_from_pairs(NER_containing_events)\n",
     "print(graph.edges)\n",
+    "x = [print((x, y)) for y, x in sorted(zip(entity_importance_evaluation(graph), graph.nodes), reverse=True)]\n",
+    "\n",
     "#TODO: Replace with coreferences and map with deduplication mapper"
    ]
   },
