Implemented coreference resolution for SVO triplets

--- a/coref_resolution/Coref_resolution_slo.ipynb
+++ b/coref_resolution/Coref_resolution_slo.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c04073ef",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import helper_functions"
@@ -15,7 +19,10 @@
    "execution_count": null,
    "id": "3352f0b7",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -35,7 +42,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "99e5f8d9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "helper_functions.predict('Janez Novak je šel v Mercator. Tam je kupil mleko. Nato ga je spreletela misel, da bi moral iti v Hofer.', 0.01, True)"
@@ -45,7 +56,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "604dae70",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
